<resources>
    <string name="app_name">IGNOU</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Profile</string>
    <string name="title_notifications">Event</string>

    <string name="user_name">User Name</string>
    <string name="password">Password</string>

    <string name="profile">Profile</string>
    <string name="event">Event</string>
    <string name="subject">Subject</string>
    <string name="login">Login</string>
    <string name="welcome_to_ignou_student_application">Welcome to <b>IGNOU</b> Student Application</string>
    <string name="enrollment_no">Enrollment No.</string>
    <string name="name">Name</string>
    <string name="event_f">Online Submission of Examination form for June 2022 TEE (for ODL Programme learners)</string>
    <string name="event_s">Online submission of Project/Dissertation/Field Work Journals/Internship Reports for June 2022 Term End Examination(Date extended up to 30-06-2022)</string>
    <string name="event_th">Tentative Date Sheet for conduct of June 2022 Term End Examination.</string>
    <string name="event_fo">Admission Portals for Online and ODL (Distance) Programmmes for July 2022 Session</string>
    <string name="event_fi">Declaration of PhD result 2021- Computer Science,Nursing,Management,Commerce,Child Development,Education,Anthropology,Women Studies,English and Sanskrit</string>
    <string name="program">Program</string>
    <string name="date_of_birth">Date of Birth</string>
</resources>